compiler/tests/fail/arm-m4/tst_imm_shifted.jazz
export
fn main(reg u32 x) {
    reg bool n, z, c, v;
    n, z, c, v = #TST(x, 0x000cb000);
    [x] = x if z;
}
